# desktop

./: .craft.ini  .craft.shelf  .gitignore  .woodpecker.env  CHANGELOG.md  CMakeLists.txt  OPENCLOUD.cmake  VERSION.cmake  eu.opencloud.OpenCloudDesktop.metainfo.xml  eu.opencloud.OpenCloudDesktop.yml  opencloud.desktop.in
.github/ISSUE_TEMPLATE/: bug-report.md  user-story.md
.github/workflows/: .craft.ps1  .run-clang-tidy.ps1  .signpath.ps1  build-flatpak.yml  changelog.yml  craft_override.ini  main.yml  publish-flathub.yml  translate.yml  update-flatpak.yml
.woodpecker/: 2.yaml  artifact_links.ps1  build.ps1  build.yaml  build_test.yaml  cache-opencloud.yaml  cache-pnpm.yaml  cache-python.yaml  multiplatform-build.yaml  notification.yaml  purge-cache.yaml  python-lint.yaml  ready-release-go.yaml  translation.yaml  ui-tests.yaml
.woodpecker/.multiplatform-build/: build.ps1  package.ps1  test.ps1
.woodpecker/multiplatform-build/: package.ps1  test.ps1
.woodpecker_files/multiplatform-build/: README.md  build.ps1  init.ps1  package.ps1  print_links.ps1  test.ps1
admin/: clean-leftovers.ps1
cmake/modules/: FindLibGit2.cmake  OCAddVfsPlugin.cmake
src/: CMakeLists.txt  OpenCloud.entitlements
src/cmd/: CMakeLists.txt  cmd.cpp  nsfpdiagnostic.h  nsfpdiagnostic.mm
src/extensions/fileprovider/: CMakeLists.txt  FileProviderConfig.h  FileProviderConfig.mm  FileProviderEnumerator.h  FileProviderEnumerator.mm  FileProviderItem.h  FileProviderItem.mm  FileProviderItemCache.h  FileProviderItemCache.mm  FileProviderThumbnails.h  FileProviderThumbnails.mm  FileProviderWebDAV.h  FileProviderWebDAV.mm  FileProviderWorkingSetDelta.h  FileProviderWorkingSetDelta.mm  FileProviderXPCService.h  FileProviderXPCService.mm  Info.plist.in  OpenCloudFileProvider.entitlements  OpenCloudFileProvider.entitlements.in  OpenCloudFileProviderExtension.h  OpenCloudFileProviderExtension.mm
src/extensions/fileprovider/tests/: run.sh  test_fileprovider_item_cache.mm  test_fileprovider_webdav.mm  test_fileprovider_workingset_delta.mm
src/plugins/vfs/openvfs/: CMakeLists.txt  vfs_openvfs.cpp  vfs_openvfs.h
src/plugins/vfs/xattr/: CMakeLists.txt  vfs_xattr.cpp  vfs_xattr.h  xattrwrapper.cpp  xattrwrapper.h
src/resources/: CMakeLists.txt  core_theme.qrc  fonticon.h  qmlresources.cpp  resources.cpp
src/resources/theme/universal/: qtquickcontrols2.conf
test/: CMakeLists.txt  opencloud_add_test.cmake  testblacklist.cpp  testclassifyerror.cpp  testdatabaseerror.cpp  testdownload.cpp  testfolderman.cpp  testjhash.cpp  testjwt.cpp  testlocaldiscovery.cpp  testlockedfiles.cpp  testpermissions.cpp  testremotediscovery.cpp  testselfheal.cpp  testsyncconflict.cpp  testsyncdelete.cpp  testsyncengine.cpp  testsyncmove.cpp  testtusresume.cpp  testutility.cpp  testvfsnsfp.cpp  testvfsnsfp_integration.cpp  testxmlparse.cpp
test/gui/: .gitignore  .woodpecker.env  Makefile  README.md  behave.ini  config.sample.ini  environment.py  pyproject.toml  requirements.txt
test/gui/features/activity/: activity.feature
test/gui/features/add-account/: account.feature
test/gui/features/delete-files-folders/: delete.feature
test/gui/features/edit-files/: edit.feature
test/gui/features/login-logout/: login-logout.feature
test/gui/features/move-files-folders/: moveFilesFolders.feature
test/gui/features/remove-account-connection/: removeAccountConnection.feature
test/gui/features/spaces/: spaces.feature
test/gui/features/sync-edge-cases/: syncResources.feature
test/gui/features/sync-resources/: syncResources.feature
test/gui/features/tabs-settings/: tabsSettings.feature  test.feature
test/gui/features/vfs/: vfs.feature
test/gui/helpers/: AppHelper.py  ConfigHelper.py  ElementHelper.py  FilesHelper.py  ReportHelper.py  ScreenRecorder.py  SetupClientHelper.py  SpaceHelper.py  StacktraceHelper.py  SyncHelper.py  TableParser.py  UserHelper.py  Utils.py  VFSFileHelper.py  WebUIHelper.py  WinPipeHelper.py
test/gui/helpers/api/: http_helper.py  provisioning.py  webdav_helper.py
test/gui/helpers/keys/: keys_map.py
test/gui/pageObjects/: AccountConnectionWizard.py  AccountSetting.py  Activity.py  EnterPassword.py  PublicLinkDialog.py  Settings.py  SyncConnection.py  SyncConnectionWizard.py  Toolbar.py
test/gui/release-test-plan/: testplan.md
test/gui/shared/scripts/: bdd_hooks.py
test/gui/shared/scripts/helpers/: ConfigHelper.py  FilesHelper.py  SetupClientHelper.py  StacktraceHelper.py  SyncHelper.py  VFSFileHelper.py  WebUIHelper.py
test/gui/shared/scripts/helpers/api/: webdav_helper.py
test/gui/shared/scripts/pageObjects/: AccountConnectionWizard.py  AccountSetting.py  SyncConnection.py  SyncConnectionWizard.py
test/gui/shared/steps/: account_context.py  file_context.py  server_context.py  sync_context.py  vfs_context.py
test/gui/step_types/: types.py
test/gui/steps/: account_context.py  file_context.py  server_context.py  spaces_context.py  sync_context.py  vfs_context.py
test/gui/tst_activity/: test.feature
test/gui/tst_addAccount/: test.feature
test/gui/tst_checkAlltabs/: test.feature
test/gui/tst_deletFilesFolders/: test.feature
test/gui/tst_deleteFilesFolders/: test.feature
test/gui/tst_editFiles/: test.feature
test/gui/tst_loginLogout/: test.feature
test/gui/tst_moveFilesFolders/: test.feature
test/gui/tst_removeAccountConnection/: test.feature
test/gui/tst_spaces/: test.feature
test/gui/tst_syncing/: test.feature
test/gui/tst_vfs/: test.feature
test/gui/webUI/: package.json
test/gui/woodpecker/: gui_test_reports.sh  run_atspi_webdriver.sh  script.sh  server.ini
test/manual/: testplan.md
test/testconnectionvalidator/: testconnectionvalidator.cpp
test/testoauth/: testoauth.cpp
test/testutils/: syncenginetestutils.cpp  syncenginetestutils.h  testutils.cpp  testutilsloader.cpp
translations/: desktop_ar.ts  desktop_ca.ts  desktop_de.ts  desktop_el.ts  desktop_en.ts  desktop_fr.ts  desktop_he.ts  desktop_hu.ts  desktop_it.ts  desktop_ja.ts  desktop_ko.ts  desktop_lo.ts  desktop_nl.ts  desktop_pl.ts  desktop_pt.ts  desktop_ru.ts  desktop_sv.ts
(+194 files in other folders)
