[project]
name = "gui"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "appium-python-client==5.3.* ; python_full_version >= '3.10'",
    "behave==1.3.* ; python_full_version >= '3.10'",
    "behave-html-pretty-formatter==1.16.* ; python_full_version >= '3.10'",
    "black==24.3.* ; python_full_version >= '3.10'",
    "flask==3.0.* ; python_full_version >= '3.10' and sys_platform == 'linux'",
    "imageio-ffmpeg==0.6.* ; python_full_version >= '3.10'",
    "mss==9.* ; python_full_version >= '3.10'",
    "numpy==1.26.* ; python_full_version >= '3.10' and sys_platform == 'linux'",
    "openpyxl==3.1.* ; python_full_version >= '3.10'",
    "playwright==1.58.* ; python_full_version >= '3.10'",
    "psutil==5.9.* ; python_full_version >= '3.10'",
    "pyautogui==0.9.* ; python_full_version >= '3.10'",
    "pygobject==3.42.* ; python_full_version >= '3.10' and sys_platform == 'linux'",
    "pylint==3.2.* ; python_full_version >= '3.10'",
    "pypdf==6.5.* ; python_full_version >= '3.10'",
    "pyperclip==1.11.* ; python_full_version >= '3.10'",
    "pyside6==6.9.* ; python_full_version >= '3.10'",
    "python-docx==1.2.* ; python_full_version >= '3.10'",
    "python-pptx==1.0.* ; python_full_version >= '3.10'",
    "pywin32==305 ; python_full_version >= '3.10' and sys_platform == 'win32'",
    "requests==2.32.* ; python_full_version >= '3.10'",
    "sure==2.0.* ; python_full_version >= '3.10'",
]
