[project]
name = "gui"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "appium-python-client==5.3.*",
    "behave==1.3.*",
    "behave-html-pretty-formatter==1.16.*",
    "flask==3.0.* ; sys_platform == 'linux'",
    "imageio-ffmpeg==0.6.*",
    "mss==9.*",
    "numpy==1.26.* ; sys_platform == 'linux'",
    "openpyxl==3.1.*",
    "playwright==1.58.*",
    "psutil==5.9.*",
    "pyautogui==0.9.*",
    "pygobject==3.42.* ; sys_platform == 'linux'",
    "pypdf==6.5.*",
    "pyside6==6.9.*",
    "python-docx==1.2.*",
    "python-pptx==1.0.*",
    "pywin32==305 ; sys_platform == 'win32'",
    "requests==2.32.*",
    "sure==2.0.*",
]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
]

[tool.ruff.format]
quote-style = "preserve"